--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
   "name": "graphql-tag.macro",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "graphql-tag as a babel-macro",
-  "main": "index.js",
+  "author": {
+    "name": "Leonardo Andres Garcia Crespo",
+    "email": "leoasis@gmail.com",
+    "url": "http://leoasis.github.io"
+  },
+  "files": [
+    "dist"
+  ],
   "license": "MIT",
+  "main": "dist/index.js",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-jest": "^21.0.2",
     "babel-literal-to-ast": "^1.0.0",
     "babel-macros": "^1.0.2",
@@ -17,7 +26,9 @@
     "graphql-tag": "^2.4.2"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "babel": "babel src --out-dir dist --ignore test.js,__snapthots__",
+    "prepublish": "rm -rf dist && npm run babel && mv dist/index.macro.js dist/index.js"
   },
   "jest": {
     "transform": {
