--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "email": "leoasis@gmail.com",
     "url": "http://leoasis.github.io"
   },
+  "homepage": "https://github.com/leoasis/graphql-tag.macro",
   "files": [
     "dist"
   ],
