Properly ignore test files from being compiled by babel

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "scripts": {
     "test": "jest",
-    "babel": "babel src --out-dir dist --ignore test.js,__snapthots__",
+    "babel": "babel src --out-dir dist --ignore \"src/**/*.test.js,__snapthots__\"",
     "prepublish": "rm -rf dist && npm run babel && mv dist/index.macro.js dist/index.js"
   },
   "jest": {
